[gd_scene load_steps=4 format=3 uid="uid://bfiu33ejpd8ww"]

[ext_resource type="Script" path="res://Scripts/Competition/RecipeNode.gd" id="1_4hiug"]
[ext_resource type="Texture2D" uid="uid://t6p7x7x3i4h0" path="res://Art Assets/recipe/recipe_background.png" id="2_riayr"]
[ext_resource type="Texture2D" uid="uid://clkg26nihwsd2" path="res://Art Assets/recipe/points_background.png" id="3_5fapw"]

[node name="RecipeNode" type="Node2D"]
script = ExtResource("1_4hiug")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -100.0
offset_right = 140.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_riayr")
patch_margin_left = 80
patch_margin_top = 100
patch_margin_right = 80
patch_margin_bottom = 100

[node name="TopRegion" type="Control" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 1

[node name="Label" type="Label" parent="NinePatchRect/TopRegion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -11.5
offset_right = 26.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Recipe"

[node name="PointHolder" type="Control" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="PointScaler" type="Node2D" parent="NinePatchRect/PointHolder"]

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/PointHolder/PointScaler"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5fapw")

[node name="Label" type="Label" parent="NinePatchRect/PointHolder/PointScaler"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComponentNodeHolder" type="Node2D" parent="."]
position = Vector2(0, -28)

[node name="AnimQueueLabel" type="Label" parent="."]
visible = false
offset_left = -600.0
offset_top = -125.0
offset_right = -250.0
offset_bottom = 325.0
